# task-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sort.cfg  LICENSE  README.md  pyproject.toml
src/: cli.py
src/commands/: __init__.py  add_task_command.py  base.py  delete_task_command.py  list_task_command.py  stats_command.py  stats_task_command.py
tests/: test_commands.py
